[gd_scene load_steps=3 format=3 uid="uid://dxv4pu5x3t8rx"]

[ext_resource type="Script" path="res://Scenes/UI/SupplyDisplay.gd" id="1_2qgu8"]
[ext_resource type="Texture2D" uid="uid://c6iehapq57ncv" path="res://Assets/UI/bar_foreground.png" id="3_n8sck"]

[node name="SupplyDisplay" type="Control"]
minimum_size = Vector2(0, 38)
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource( "1_2qgu8" )
progress_bar_path = NodePath("ProgressBar")
name_label_path = NodePath("LabelsContainer/NameLabel")
quantity_label_path = NodePath("LabelsContainer/H/QuantityLabel")
capacity_label_path = NodePath("LabelsContainer/H/CapacityLabel")
gain_label_path = NodePath("LabelsContainer/H/GainLabel")
metadata/_edit_use_custom_anchors = false

[node name="ProgressBar" type="TextureProgressBar" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource( "3_n8sck" )
texture_progress = ExtResource( "3_n8sck" )
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.351563, 0.351563, 0.351563, 1)

[node name="LabelsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="NameLabel" type="Label" parent="LabelsContainer"]
offset_right = 1280.0
offset_bottom = 20.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "RESOURCE"

[node name="H" type="HBoxContainer" parent="LabelsContainer"]
offset_top = 20.0
offset_right = 1280.0
offset_bottom = 37.0

[node name="QuantityLabel" type="Label" parent="LabelsContainer/H"]
offset_right = 55.0
offset_bottom = 17.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "99999999"

[node name="CapacityLabel" type="Label" parent="LabelsContainer/H"]
offset_left = 59.0
offset_right = 122.0
offset_bottom = 17.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "/ 99999999"

[node name="GainLabel" type="Label" parent="LabelsContainer/H"]
offset_left = 126.0
offset_right = 196.0
offset_bottom = 17.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "(+99999999)"
